--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,10 +33,53 @@
 #circulo{
   background-color: transparent;
   border: 1px solid white;
-  width: 50px;
-  height: 50px;
-  margin-top: 100px;
+  width: 60px;
+  height: 60px;
+  margin-top: 125px;
   position: absolute;
-  right: 50%;
+  right: 225px;
+  border-radius: 30px;
+}
+#p1,#p2,#p3{
+  background-color: transparent;
+  border: 1px solid white;
+  background: white;
+  width: 15px;
+  height: 15px;
   border-radius: 25px;
+  position: absolute;
+}
+#p1{
+  margin-top: 185px;
+  right: 60px;
+}
+#p2{
+  margin-top: 37px;
+  right: 270px;
+}
+#p3{
+  margin-top: 100px;
+  right: 430px;
+}
+
+.container {
+  width: 700px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 350px;
+  padding-right: 350px;
+}
+
+.container:before, .container:after {
+    content: " ";
+    display: table;
+}
+
+*:before, *:after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.container:after {
+    clear: both;
 }
